--- a/inicio/templates/inicio/inicioAdmin.html
+++ b/inicio/templates/inicio/inicioAdmin.html
@@ -22,13 +22,6 @@
 
   <body>
 
-    <script type="text/javascript">
-      // Initilize the toast function
-      $(document).ready( function(){
-        $('.tooltipped').tooltip({delay: 50});
-      });
-    </script>
-
     <nav class="z-depth-0 nm-main-navbar">
       <div class="nav-wrapper">
         <div class="left grey-text text-darken-4 nm-user">
@@ -44,7 +37,7 @@
         <div class="col right nm-close">
   				<form class="" method="post">{% csrf_token %}
             <input type="text" name="salir" value="True" style="display:none" >
-  				  <a class="z-depth-0" type="submit"><i class="material-icons">close</i></a>
+  				  <a class="z-depth-0" type="submit"><i class="material-icons">exit_to_app</i></a>
   				</form>
   			</div>
       </div>
@@ -55,20 +48,32 @@
 
       <div class="row center">
 
-        <div class="col m12 s12 l8 offset-l2 nomBienv">
-          <h5>¡Hola! <b>{{nombre}}</b></h5>
+        <div class="col m12 s12 l8 offset-l2 nm-user-msg">
+          <h3>¡Hola! <b>{{nombre}}.</b></h3>
+          <p>Fecha </p>
+          <p>Version: {{version}}</p>
         </div>
 
-        <div class="col m12 s12 l8 offset-l2">
+        <div class="row col m12 s12 l9 offset-l2 nm-central-menu">
 
-
-          <a class="waves-effect waves-light btn btn-accion"><i class="material-icons">assignment</i>Corridas</a>
-          <a class="waves-effect waves-light btn btn-accion pink darken-1"><i class="material-icons">assignment_turned_in</i>Precios</a>
-          <a class="waves-effect waves-light btn btn-accion light-green darken-1"><i class="material-icons">list</i>Órdenes de compra</a>
-          <a class="waves-effect waves-light btn btn-accion" href="{% url 'nuevaRecepcion' %}"><i class="material-icons">assignment</i>Realizar Recepcion</a>
-          <a class="waves-effect waves-light btn btn-accion light-green darken-1" href="{% url 'listaRecepcion' %}"><i class="material-icons">list</i>Ver mis recepciones</a>
-          <a class="waves-effect waves-light btn btn-accion pink darken-1" href="{% url 'nuevaCorrida' %}"><i class="material-icons">assignment_turned_in</i>Realizar Corrida</a>
-
+          <div class="col m4 s4 l4">
+            <div class="nm-square-menu nm-opt-dis"><a href=""><i class="material-icons">assignment</i>Corridas</a></div>
+          </div>
+          <div class="col m4 s4 l4">
+            <div class="nm-square-menu nm-opt-dis"><a href=""><i class="material-icons">assignment_turned_in</i>Precios</a></div>
+          </div>
+          <div class="col m4 s4 l4">
+            <div class="nm-square-menu nm-opt-dis"><a href=""><i class="material-icons">add_shopping_cart</i>Órdenes de compra</a></div>
+          </div>
+          <div class="col m4 s4 l4">
+            <div class="nm-square-menu nm-opt-ready"><a href="{% url 'nuevaRecepcion' %}"><i class="material-icons">assignment</i>Realizar Recepcion</a></div>
+          </div>
+          <div class="col m4 s4 l4">
+            <div class="nm-square-menu nm-opt-ready"><a href="{% url 'listaRecepcion' %}"><i class="material-icons">list</i>Ver mis recepciones</a></div>
+          </div>
+          <div class="col m4 s4 l4">
+            <div class="nm-square-menu nm-opt-ready"><a href="{% url 'nuevaCorrida' %}"><i class="material-icons">assignment_turned_in</i>Realizar Corrida</a></div>
+          </div>
 
         </div>
 
@@ -93,5 +98,36 @@
       </div>
 
     </section>
+
+    <script type="text/javascript">
+      // Initilize the toast function
+      $(document).ready( function(){
+        $('.tooltipped').tooltip({delay: 50});
+        $( '.nm-user-msg p:nth-child(2)' ).html( date() );
+      });
+      $('.nm-opt-dis a').click( function(e){
+        e.preventDefault();
+        var toastContent = $('<span>Disponible próximamente.</span>');
+        Materialize.toast(toastContent, 10000, 'black');
+      });
+
+      // Solution took from: https://stackoverflow.com/questions/12409299/how-to-get-current-formatted-date-dd-mm-yyyy-in-javascript-and-append-it-to-an-i?answertab=active#tab-top
+      function date(){
+        var today = new Date();
+        var dd = today.getDate();
+        var mm = today.getMonth()+1; //January is 0!
+
+        var yyyy = today.getFullYear();
+        if(dd<10){
+            dd='0'+dd;
+        }
+        if(mm<10){
+            mm='0'+mm;
+        }
+        var today = dd+'/'+mm+'/'+yyyy;
+        return today;
+      }
+    </script>
+
   </body>
 </html>
