Added p variable in order to continue developing the main screen

--- a/inicio/templates/inicio/inicioAdmin.html
+++ b/inicio/templates/inicio/inicioAdmin.html
@@ -37,7 +37,7 @@
         <div class="col right nm-close">
   				<form class="" method="post">{% csrf_token %}
             <input type="text" name="salir" value="True" style="display:none" >
-  				  <a class="z-depth-0" type="submit"><i class="material-icons">exit_to_app</i></a>
+  				  <button class="z-depth-0" type="submit"><i class="material-icons">exit_to_app</i></button>
   				</form>
   			</div>
       </div>
